# quicktill-tillweb

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt  start-daemon  start-testserver  stop-daemon  tillweb-nginx-configuration
config/: README
database/: README
static-dist/: bargraph.css  display.css  emf.css  fonts.css  style.css
systemd/: setup.sh  start.sh  tillweb-uwsgi.conf  tillweb.service
templates/: ales.html  base.html  breadcrumbs.html  charts.html  display-cans-and-bottles.html  display-club-mate.html  display-on-tap.html  display-progress.html  display-soft-drinks.html  display-wines-and-spirits.html  display.html  display_cans_and_bottles.html  display_on_tap.html  emf.html  form-field.html  index.html  ontap-lines.html  refusals.html  whatson.html
templates/registration/: logged_out.html  login.html  password-change.html  profile.html  userdetail.html  userlist.html
tillmenu/: context_processors.py  models.py  parser.py  urls.py  views.py
tillmenu/migrations/: 0001_initial.py
tillmenu/templates/tillmenu/: index.html  menu.html
tillweb_infra/: context_processors.py  settings.py  settings_database.py  settings_production.py  urls.py  views.py  wsgi.py
