[tool.poetry]
name = "quicktill-tillweb"
version = "0.2.0"
description = "Simple Django project to run quicktill.tillweb"
authors = ["Stephen Early <steve@assorted.org.uk>"]
license = "GPL-3.0-or-later"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "~5.2"
django4-bootstrap-breadcrumbs = "~0.10"
django-widget-tweaks = "~1.5"
psycopg2 = "~2.9"
odfpy = "~1.4"
sqlalchemy = "~2.0"
quicktill = { path = "../quicktill", extras = ["tillweb"], develop = true }
setuptools = "^78.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
